# cl-ray-tracing

./: CMakeLists.txt  README.md
include/: common.h  host_kernel_types.h  linear_algebra.h  log.h  ray_tracer.h  renderer.h  types.h  util.h
kernel/: host_kernel_types.h  ray_tracing.cl
shader/: fragment_shader.glsl  vertex_shader.glsl
src/: linear_algebra.c  main.c  ray_tracer.c  renderer.c  util.c
